little fixes and UI improvements
- correct pre-selection of bands from permalink
- correct setting of band selectors when switching between 1C and 2A
files
- query processing service with correct tile urls
- output alert when originalValue request out of bounds
- automatic display of correct tiles when switching between grayscale
and RGB modes
- fix getParamFromPermalink function to actually return something...
- display cursor as pointer when hovering over items in search result
list

--- a/style.css
+++ b/style.css
@@ -60,3 +60,7 @@ nav {
 #details #details-identifier-container {
   word-break: break-all;
 }
+
+#searchresults li {
+  cursor: pointer;
+}
